refactor : enum value 값 String 통일로 인한 코드 변경